# pdf-invoice-generator

./: .gitignore  README.md  builder.py  del_html.py  formatters.py  generate_random.py  labels.py  main.py  pyproject.toml  renderer.py  requirements.txt  templates.py
data/: customers.json  products.json  vendors.json
generated_sample/: sample_1_bengali.html  sample_1_english.html  sample_1_hindi.html  sample_1_kannada.html  sample_1_marathi.html  sample_1_tamil.html  sample_1_telugu.html  sample_2_bengali.html  sample_2_english.html  sample_2_hindi.html  sample_2_kannada.html  sample_2_marathi.html  sample_2_tamil.html  sample_2_telugu.html  sample_3_bengali.html  sample_3_english.html  sample_3_hindi.html  sample_3_kannada.html  sample_3_marathi.html  sample_3_tamil.html  sample_3_telugu.html  sample_4_bengali.html  sample_4_english.html  sample_4_hindi.html  sample_4_kannada.html  sample_4_marathi.html  sample_4_tamil.html  sample_4_telugu.html  sample_5_bengali.html  sample_5_english.html  sample_5_hindi.html  sample_5_kannada.html  sample_5_marathi.html  sample_5_tamil.html  sample_5_telugu.html
output/invoices/: invoice_bn_Bengali.html  invoice_en_English.html  invoice_hi_Hindi.html  invoice_kn_Kannada.html  invoice_mr_Marathi.html  invoice_ta_Tamil.html  invoice_te_Telugu.html
output/random/: sample_1_bengali.html  sample_1_english.html  sample_1_hindi.html  sample_1_kannada.html  sample_1_marathi.html  sample_1_tamil.html  sample_1_telugu.html  sample_2_bengali.html  sample_2_english.html  sample_2_hindi.html  sample_2_tamil.html  (+3 more)
scripts/: clean_output.py
